--- a/todo/templates/todo_list.html
+++ b/todo/templates/todo_list.html
@@ -25,7 +25,7 @@
                             <td>
                                 <button class="btn btn-primary" title="update"></button>
                                 <button class="btn btn-info" title="info"></button>
-                                <button class="btn btn-danger" title="delete"></button>
+                                <button class="btn btn-danger" title="delete" hx-delete="/delete/{{todo.id}}" ></button>
                                 
                             </td>
                         </tr>
