delete_todo_done

--- a/todo/templates/todo_list.html
+++ b/todo/templates/todo_list.html
@@ -25,13 +25,16 @@
                             <td>
                                 <button class="btn btn-primary" title="update"></button>
                                 <button class="btn btn-info" title="info"></button>
-                                <button class="btn btn-danger" title="delete" hx-delete="/delete/{{todo.id}}" ></button>
+                                <button class="btn btn-danger" title="delete" hx-delete={% url 'delete_todo' id=todo.id %} 
+                                    hx-trigger="click" hx-target="#status" hx-swap="innerHTML" hx-confirm="Are you sure you want to delete this todo?"></button>
                                 
                             </td>
                         </tr>
                     {% endfor %}
                 </tbody>
             </table>
+        </div>
+        <div class="w-100 text-info bg-dark text-center" id="status">
         </div>
     
 
