--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <html>
     {%block style%}
     {%endblock%}
-    <body>
+    <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
         <div id="header">
             {%block header%}
             {%endblock%}
