--- a/todo/templates/todo_list.html
+++ b/todo/templates/todo_list.html
@@ -1,11 +1,34 @@
 {%extends "base.html"%}
 {%load static%}
 
+{% block style %}
+<style>
+    .curpointer {
+        cursor: pointer;
+    }
+</style>    
+{% endblock style%}
+
 {%block main%}
 
-
         <div class="container mt-5">
-            <h2 class="mb-4">To-Do List</h2>
+            <div>
+                <h2 class="mb-4">To-Do List</h2>
+                <!--
+                Boosted Links (hx-boost="true")
+                Let’s take a look at an example of a boosted link. Below is a link to a hypothetical settings page for a web application. 
+                Because it has hx-boost="true" on it, htmx will halt the normal link behavior of issuing a request to the /add
+                path and replacing the entire page with the response. Instead, htmx will issue an AJAX request to /add,
+                take the result and replace the body element with the new content.
+
+                A boosted link
+                <a href="/todos/add" hx-boost="true">Settings</a> (1)
+                The hx-boost attribute makes this link AJAX-powered.
+                You might reasonably ask: what’s the advantage here? We are issuing an AJAX request and simply replacing the entire body.                    
+                -->
+                <a href={% url 'add_todo' %} hx-boost="true"> <img class="curpointer" src="{% static 'icons/add.png' %}" /> </a>
+            </div>
+            
             <table class="table">
                 <thead>
                     <tr>
