detail_todo_added

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,10 @@
            {%include "./includes/footer.html" %}
 
         </div>
+
+        {%block script%}
+        {%endblock script%}        
     </body>
+
 
 </html>
