info_button fixed

--- a/todo/templates/_todo_detail.html
+++ b/todo/templates/_todo_detail.html
@@ -2,24 +2,23 @@
 <!-- partial template for htmx detail todo view -->
     
     <td id="item_detail_todo">
-    <ul>
-        <li> <strong class="text-primary"> id = {{item.id}} </strong></li>
-        <li> <strong class="bg-info">name = {{item.name}}</strong></li>
-        <li> <strong class="bg-light"> completed = {{item.completed}}</strong></li>
-        <li> <strong class="btn-danger">expired = {{item.expired}}</strong></li>
-    </ul>
-    </td>
-    <td id="close_detail_todo">
-        <button class="btn btn-danger" title="close" hx-on:click=hide_detail_info()>x</button>
+        <button class="btn btn-danger" title="close" hx-on:click=hide_detail_info(this)>x</button>
+        <ul>
+            <li> <strong class="text-primary"> id = {{item.id}} </strong></li>
+            <li> <strong class="bg-info">name = {{item.name}}</strong></li>
+            <li> <strong class="bg-light"> completed = {{item.completed}}</strong></li>
+            <li> <strong class="btn-danger">expired = {{item.expired}}</strong></li>
+        </ul>
     </td>
 
     {% block script %}
     <script>
-        function hide_detail_info(){
-            const td_detail =  document.getElementById("item_detail_todo")
-            const bt_close = document.getElementById("close_detail_todo")
-            td_detail.parentNode.removeChild(td_detail);
-            bt_close.parentNode.removeChild(bt_close);
+        function hide_detail_info(elm){
+            // console.log(`elm is: ${elm} parent: ${elm.parentNode}`)
+            const parent_td = elm.parentNode
+            while (parent_td.firstChild){
+                parent_td.firstChild.remove()
+            }
         }
     </script>
     {% endblock script %}
