--- a/templates/includes/head.html
+++ b/templates/includes/head.html
@@ -18,6 +18,8 @@
 
 			<!-- add htmx library-->
 			<script src="{%static 'htmx/htmx.min.js'%}"></script>
+			<!-- test umbrella -->
+			<script src="{%static 'umbrella/umbrella.min.js'%}"></script>
 		
 	</head>
 {%endblock%}
